--- a/OtoGalerim/app/src/main/res/values/strings.xml
+++ b/OtoGalerim/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     </string>
     <string name="title_activity_register">Sign in</string>
     <string name="title_activity_dogrulama">Sign in</string>
+    <string name="title_activity_ilanlarim">ilanlarim</string>
 </resources>
