--- a/nobetciezcane - map dneeme/app/src/main/res/values/strings.xml
+++ b/nobetciezcane - map dneeme/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">nobetciezcane</string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_activity_my_loc_listener">Map</string>
 </resources>
