--- a/nobetciezcane/app/src/main/res/values/strings.xml
+++ b/nobetciezcane/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">nobetciezcane</string>
+    <string name="app_name">İstanbul Nöbetci Eczaneleri</string>
     <string name="title_activity_maps">Map</string>
 </resources>
