--- a/sohbetuygulamasi/app/src/main/res/values/strings.xml
+++ b/sohbetuygulamasi/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_giris">GirisActivity</string>
     <string name="title_activity_chat">ChatActivity</string>
+    <string name="title_activity_main3">Main3Activity</string>
 </resources>
